# SparGlove

./: CMakeLists.txt  MYO_Data_Gathering.cpp
include/: File_Classifier.h  MYO_Classifier.hpp  SparConfiguration.h  SparConfiguration.hpp  SparGlove.hpp  SparGloveThreaded.hpp  SparGloveUnified.hpp  Spar_Parameters.h  Spar_glove.hpp
src/: File_Classifier.cpp  MYO_Classifier.cpp  MYO_Classifier_class.cpp  SparConfiguration.cpp  SparGlove.cpp  main.cpp
